Add animation test with a yoshi sprite.

--- a/Makefile.am
+++ b/Makefile.am
@@ -10,6 +10,7 @@ bin_PROGRAMS = CApp
 CApp_SOURCES = include/CApp.h \
 							 include/CSurface.h \
 							 include/CEvent.h \
+							 include/CAnimation.h \
 							 src/CApp.cpp \
 							 src/CApp_on_init.cpp \
 							 src/CApp_on_event.cpp \
@@ -17,6 +18,7 @@ CApp_SOURCES = include/CApp.h \
 							 src/CApp_on_render.cpp \
 							 src/CApp_on_cleanup.cpp \
 							 src/CSurface.cpp \
-							 src/CEvent.cpp
+							 src/CEvent.cpp \
+							 src/CAnimation.cpp
 
 dist_noinst_SCRIPT = autogen.sh
